syntax = "proto3";
package communityserver.v1;


message GetUserCommunitiesRequest {
}

message GetUserCommunitiesResponse {
  message Community {
    string id = 1;
    string name = 2;
  }

  repeated Community communities = 1;
}

message JoinServerRequest {
  bool join_default_community = 1;
}

message JoinServerResponse {
}